# Prefect_techgym

./: README.md
prefect-project/: README.md  pyproject.toml
prefect-project/prefect_project/basics/: base_code.py  base_code_with_flows.py  basic.py  basic_flow.py  basic_sync.py  deploy_code.py  retries.py  sync_async.py
