[tool.poetry]
name = "prefect demo"
version = "0.1.0"
description = "Demo Project for Workflow Orchestration with Prefect"
authors = ["mor sondak <mor.sondak@gmail.com>"]
license = "mit"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^3.1.2"
openai = "^1.54.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
